crates/ir/tests/snapshots/lower_test__extern__extern_throws.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module extern__extern_throws

extern java "java.lang.Long" parseLong(String) -> Result[String, Int]
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare parseLong: (String) -> Result[String, Int]
declare println: (h) -> Unit

fn showResult(v0: Result[String, Int]) -> String =
  switch v0 {
    0 (v1: Int) ->
      let v2: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v3: String = trait_call core/show.Show.show(v2, v1)
      let v4: String = concat_string("Ok(", v3)
      let v5: String = concat_string(v4, ")")
      v5
    1 (v6: String) ->
      let v7: String = concat_string("Err(", v6)
      let v8: String = concat_string(v7, ")")
      v8
  }

fn main() -> Unit =
  let v9: Result[String, Int] = call parseLong("42")
  let v10: String = call showResult(v9)
  let v11: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v12: Unit = call println(v11, v10)
  let v14: Result[String, Int] = call parseLong("abc")
  let v15: String = call showResult(v14)
  let v13: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v16: Unit = call println(v13, v15)
  v16
