crates/ir/tests/snapshots/lower_test__extern__extern_trait_codegen.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module extern__extern_trait_codegen

trait Runnable[o8] { run(o8): Unit }
instance extern__extern_trait_codegen.Runnable[$Fun0$Unit] { run=Runnable$$$Fun0$Unit$$run }
extern java "java.lang.Thread" new(d8) -> ~JThread
extern java "java.lang.Thread" start(JThread) -> Unit
extern type java "java.lang.Thread" JThread
import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(k) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
declare new: (d8) -> ~JThread
declare println: (k) -> Unit
declare start: (JThread) -> Unit

fn main() -> Unit =
  let v3: () -> Unit = make_closure(lambda$29, [])
  let v4: Dict[extern__extern_trait_codegen.Runnable, () -> Unit] = get_dict extern__extern_trait_codegen.Runnable[() -> Unit]
  let v0: ~JThread = call new(v4, v3)
  let v5: Unit = call start(v0)
  v5

fn Runnable$$$Fun0$Unit$$run(v6: () -> Unit) -> Unit =
  let v7: Unit = call_closure v6()
  v7

fn lambda$29() -> Unit =
  let v1: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v2: Unit = call println(v1, "hello from bridge")
  v2
